--- a/obs/src/static/index.html
+++ b/obs/src/static/index.html
@@ -5,7 +5,7 @@
 
 <h1>Blinch OBS Source</h1>
 <p id="text" class="rainbow-text">Loading</p>
-
+<p id="txData">Loading Memos</p>
 </body>
 
 <script src="/static/js/highlight.js"></script>
