--- a/obs/src/static/index.html
+++ b/obs/src/static/index.html
@@ -8,6 +8,6 @@
 <p id="txData">Loading Memos</p>
 </body>
 
-<script src="/static/js/highlight.js"></script>
+<script src="/static/js/bs58.bundle.js"></script>
 <script src="/static/js/watcher.js"></script>
 </html>
