fix: cleanup live reload

--- a/obs/src/static/index.html
+++ b/obs/src/static/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1>Blinch OBS Source</h1>
-<p id="text" class="rainbow-text">Loading</p>
+<p id="text">Loading Account Watcher</p>
 <p id="txData">Loading Memos</p>
 </body>
 
