--- a/obs/src/static/index.html
+++ b/obs/src/static/index.html
@@ -9,6 +9,9 @@
 <body>
 
 <h1>Blinch OBS Source</h1>
+
+<h2 id="display"></h2>
+
 <p id="text">Loading Account Watcher</p>
 <p id="txData">Loading Memos</p>
 </body>
