--- a/obs/src/static/index.html
+++ b/obs/src/static/index.html
@@ -10,7 +10,11 @@
 
 <h1>Blinch OBS Source</h1>
 
-<h2 id="display"></h2>
+<div>
+    <h2 id="display"></h2>
+    <p id="memo"></p>
+</div>
+
 
 <p id="text">Loading Account Watcher</p>
 <p id="txData">Loading Memos</p>
