--- a/obs/src/static/index.html
+++ b/obs/src/static/index.html
@@ -13,6 +13,10 @@
 <div>
     <h2 id="display"></h2>
     <p id="memo"></p>
+    <div id="gif">
+        <iframe src="https://giphy.com/embed/kIvLVjAulfNTcxUPXU" width="240" height="240" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        <p><a href="https://giphy.com/gifs/excited-celebrate-yay-kIvLVjAulfNTcxUPXU">via GIPHY</a></p>
+    </div>
 </div>
 
 
