move to tsx page generation

--- a/obs/src/static/index.html
+++ b/obs/src/static/index.html
@@ -1,29 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<link type="text/css" rel="stylesheet" href="/static/css/default.css" />
-<style>
-    body { 
-    background-color: rgba(255,255,255, 0.1);
-}
-</style>
-<body>
-
-<h1>Blinch OBS Source</h1>
-
-<div>
-    <h2 id="display"></h2>
-    <p id="memo"></p>
-    <div id="gif">
-        <iframe src="https://giphy.com/embed/kIvLVjAulfNTcxUPXU" width="240" height="240" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-        <p><a href="https://giphy.com/gifs/excited-celebrate-yay-kIvLVjAulfNTcxUPXU">via GIPHY</a></p>
+  <link type="text/css" rel="stylesheet" href="/static/css/default.css" />
+  <style>
+    body {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+  </style>
+  <body>
+    <div>
+      <h2>Go to OBS page</h2>
+      <p>
+        <!-- TODO: sign up page and after login we give them link to obs source page -->
+        <a
+          href="/obs?walletAddress=CMeb68prsa7HmmVurnFLYQztAtgERsFNthvjddYJCJXa"
+        >
+          <h1>Blinch Home Page</h1></a
+        >
+      </p>
     </div>
-</div>
-
-
-<p id="text">Loading Account Watcher</p>
-<p id="txData">Loading Memos</p>
-</body>
-
-<script src="/static/js/bs58.bundle.js"></script>
-<script src="/static/js/watcher.js"></script>
+  </body>
 </html>
