--- a/obs/static/index.html
+++ b/obs/static/index.html
@@ -1,22 +1,24 @@
 <!doctype html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blinch Home Page</title>
   <link type="text/css" rel="stylesheet" href="/static/css/default.css" />
-  <style>
-    body {
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-  </style>
-  <body>
-    <div>
-      <h2>Go to OBS page</h2>
+  <link rel="stylesheet" href="/static/css/donatePage.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>Blinch Home Page</h1>
+    <div class="card">
+      <h2>&lt;&lt;&lt; Go to OBS page &gt;&gt;&gt;</h2>
       <p>
         <!-- TODO: sign up page and after login we give them link to obs source page -->
-        <a
-          href="/obs?walletAddress=CMeb68prsa7HmmVurnFLYQztAtgERsFNthvjddYJCJXa"
-        >
-          <h1>Blinch Home Page</h1></a
-        >
+        <a href="/obs?walletAddress=CMeb68prsa7HmmVurnFLYQztAtgERsFNthvjddYJCJXa">
+          [ENTER THE BLINCH ZONE]
+        </a>
       </p>
     </div>
-  </body>
+  </div>
+</body>
 </html>
